--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: climatecraft.climatecraft.ClimateCraft
 api-version: 1.19
 authors: [ Mels ]
 description: A plugin that implements climate change!
+commands:
+  sb:
+    description: Open scoreboard
